+ Added translation template generator to help out translators with translating Frog core and plugins.
+ Added Norwegian and Swedish core translations.
+ Added updated Chinese translation.
+ Removed split between frontend and backend.
+ Added an ID to the "view this page" link so it can be styled.
+ Added Danish translation for admin and file manager. Thanks Kenan.

- Fixed issue where using '..' would allow access to files outside public directory - issue 148
- Fixed issue where saving page layout without title did not result in error - issue 146
- Fixed setAllSettings failing to update settings with SQLite - issue 145
- Fixed issue with page_requested event parameter not being backwards compatible - issue 141
- Fixed USE_MOD_REWRITE is undefined in case of system not yet being installed - issue 132
- Fixed issue with failed login redirecting to admin section once logged in. - issue 131
- Fixed issue with settings table. Changed table setting's field value to TEXT instead of VARCHAR.
- Fixed GET variables not being available in Frog's frontend. - issue 75
- Fixed issue where AutoLoader did not find file for 'PageArchiveMonthIndex' - issue 101
- Fixed issue where saving a page without title results in loss of entered content - issue 68
- Fixed issue with filename lowercasing during upload of files. Thanks david - issue 113
- Fixed previous()/next() functions to work for all levels. Thanks rid - issue 109
- Fixed "Add child" tooltip for browsers not picking up the alt value of the icon.
- Fixed broken View Site link for TLDs starting with 'a' - issue 116
- Fixed XHTML compatibility problem with Comment plugin.
- Fixed issue where only the last addJavascript was accepted.
- Fixed admin CSS so that foreground colours are declared - issue 137
- Fixed MOD_REWRITE test which produced double slashes - issue 150

. Updated comment plugin to make use of statistics_api plugin if available and enabled.